[package]
name = "gpxjoin"
version = "0.2.1"
edition = "2018"
authors = ["William R. Fraser <wfraser@codewise.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
quick-xml = "*"

[dev-dependencies]
pretty_assertions = "*"
